Repaired overflow error in jumbotron section of stylesheet

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,6 +1,13 @@
 @import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@200;300;400&family=Playfair+Display:ital,wght@0,400;0,500;0,600;1,400;1,500;1,600&display=swap');
 
 /*-----------------------------------------Global Styles */
+* {
+    box-sizing: border-box;
+}
+
+html {
+    font-size: 16px;
+}
 
 /*-----------------------------------------Headers */
 
@@ -129,6 +136,7 @@ a.btn.btn-info.btn-lg:hover {
   text-transform: uppercase;
   letter-spacing: 1.5px;
   text-shadow: 2px 2px #011826;
+  overflow: hidden;
 }
 
 .jumbotron p {
